tests/typechecker/pass/026-for-each.hyg
let arr: array {int} = array(7, 1);
for (x in arr) {
    println(x + 3)
}
