tests/typechecker/fail/026-array-slice-inv-index.hyg
let arr1: array {int} = array(10, 3);
let arr2: array {int} = slice(arr1, 2.0f, false);
()
